# remap_plugin_nav_map

./: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
config/: 00-nav_map.yml
include/remap_plugin_nav_map/: plugin_nav_map.hpp
maps/: hri_demo.yaml  remap_simulation.yaml  small_house.yaml
src/remap_plugin_nav_map/: plugin_nav_map.cpp
